# aitui

./: Cargo.toml  GEMINI.md  README.md  TODO.md  config.example.toml  flake.nix  keybindings.example.toml
.cargo/: config.toml
src/: api.rs  app.rs  config.rs  event.rs  history.rs  input.rs  keymap.rs  main.rs  ui.rs
