[package]
name = "aitui"
version = "0.1.0"
edition = "2021"
description = "A TUI-based AI chat tool with Vim-like keybindings"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
arboard = "3"
pulldown-cmark = "0.12"
dirs = "6"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.2"
anyhow = "1"
